--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=">
+    <meta name="viewport" content ="width=device-width,initial-scale=1,user-scalable=yes" />
+    <!--meta name="viewport" content="width=device-width, initial-scale="-->
     <!-- Googled how to make web page mobile got this code-->
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
