try to make Moblie page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en-us">
 
 <head>
-    <meta name="viewport" content ="width=device-width,initial-scale=1,user-scalable=yes" />
-    <!--meta name="viewport" content="width=device-width, initial-scale="-->
+    <meta name="viewport" content="width=device-width, initial-scale="/>
     <!-- Googled how to make web page mobile got this code-->
+    <!--  Searh google for how to make web page mobile friendly found these 
+    https://www.thesitewizard.com/css/mobile-friendly-responsive-design.shtml
+-->
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>website</title>
