--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale="/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Googled how to make web page mobile got this code-->
     <!--  Searh google for how to make web page mobile friendly found these 
     https://www.thesitewizard.com/css/mobile-friendly-responsive-design.shtml
