--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h1 class="hero"></h1>
 
     <article class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="imagedp">
             <img src="./assets/images/search-engine-optimization.jpg" 
             alt="textbook pens and pencils" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -41,7 +41,7 @@
                 and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="imagedp">
             <img src="./assets/images/online-reputation-management.jpg" 
             alt="laptop image" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -51,7 +51,7 @@
                 gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="imagedp">
             <img src="./assets/images/social-media-marketing.jpg" 
             alt="Socail media table with lots of people" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -87,7 +87,8 @@
             <img src="./assets/images/cost-management.png" alt="management cost picture"/>
              
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs 
+                decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </article>
